--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -38,6 +38,7 @@
       "global-require": 0,
       "no-underscore-dangle": 0,
       "react/react-in-jsx-scope": 0,
-      "import/extensions": 0
+      "import/extensions": 0,
+      "react/require-default-props": 0
   }
 }
