--- a/package.json
+++ b/package.json
@@ -15,7 +15,10 @@
     "@graphql-tools/merge": "^7.0.0",
     "@graphql-tools/schema": "^8.0.3",
     "apollo-server-micro": "^3.1.2",
+    "bcryptjs": "^2.4.3",
     "graphql": "^15.5.1",
+    "jsonwebtoken": "^8.5.1",
+    "mongodb": "^4.1.0",
     "next": "11.0.1",
     "next-pwa": "^5.2.24",
     "react": "17.0.2",
