--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@graphql-tools/schema": "^8.0.3",
     "apollo-server-micro": "^3.1.2",
     "bcryptjs": "^2.4.3",
+    "cookie": "^0.4.1",
     "graphql": "^15.5.1",
     "jsonwebtoken": "^8.5.1",
     "mongodb": "^4.1.0",
