--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@graphql-tools/load-files": "^6.3.2",
     "@graphql-tools/merge": "^7.0.0",
     "@graphql-tools/schema": "^8.0.3",
+    "@types/node": "^16.4.13",
     "apollo-server-micro": "^3.1.2",
     "bcryptjs": "^2.4.3",
     "cookie": "^0.4.1",
