--- a/package.json
+++ b/package.json
@@ -14,7 +14,6 @@
     "@graphql-tools/load-files": "^6.3.2",
     "@graphql-tools/merge": "^7.0.0",
     "@graphql-tools/schema": "^8.0.3",
-    "@types/node": "^16.4.13",
     "apollo-server-micro": "^3.1.2",
     "bcryptjs": "^2.4.3",
     "cookie": "^0.4.1",
@@ -34,6 +33,8 @@
     "@graphql-codegen/typescript-operations": "^2.0.1",
     "@graphql-codegen/typescript-react-apollo": "^3.0.0",
     "@graphql-codegen/typescript-resolvers": "^2.0.0",
+    "@types/graphql": "^14.5.0",
+    "@types/node": "^16.4.13",
     "@types/react": "17.0.16",
     "autoprefixer": "^10.3.1",
     "eslint": "7.32.0",
