Fixed build issues

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -39,6 +39,7 @@
       "no-underscore-dangle": 0,
       "react/react-in-jsx-scope": 0,
       "import/extensions": 0,
-      "react/require-default-props": 0
+      "react/require-default-props": 0,
+      "@next/next/no-img-element": "off"
   }
 }
