--- a/package.json
+++ b/package.json
@@ -4,17 +4,17 @@
   "private": true,
   "scripts": {
     "codegen": "graphql-let",
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
+    "dev": "npm run codegen && next dev",
+    "build": "npm run codegen && next build",
+    "start": "npm run codegen && next start",
     "lint": "next lint"
   },
   "dependencies": {
     "@apollo/client": "^3.4.5",
-    "@graphql-tools/load-files": "^6.3.2",
-    "@graphql-tools/merge": "^7.0.0",
-    "@graphql-tools/schema": "^8.0.3",
-    "apollo-server-micro": "^3.1.2",
+    "@graphql-tools/load-files": "6.0.18",
+    "@graphql-tools/merge": "6.0.18",
+    "@graphql-tools/schema": "6.0.18",
+    "apollo-server-micro": "^2.16.1",
     "bcryptjs": "^2.4.3",
     "cookie": "^0.4.1",
     "graphql": "^15.5.1",
@@ -22,21 +22,25 @@
     "mongodb": "^4.1.0",
     "next": "11.0.1",
     "next-pwa": "^5.2.24",
+    "nexus": "^1.1.0",
+    "pg": "^8.7.1",
     "react": "17.0.2",
     "react-dom": "17.0.2"
   },
   "devDependencies": {
-    "@graphql-codegen/cli": "^2.0.1",
-    "@graphql-codegen/import-types-preset": "^2.0.0",
-    "@graphql-codegen/plugin-helpers": "^2.0.0",
-    "@graphql-codegen/typescript": "^2.0.0",
-    "@graphql-codegen/typescript-operations": "^2.0.1",
-    "@graphql-codegen/typescript-react-apollo": "^3.0.0",
-    "@graphql-codegen/typescript-resolvers": "^2.0.0",
+    "@graphql-codegen/cli": "^1.17.8",
+    "@graphql-codegen/import-types-preset": "1.18.2",
+    "@graphql-codegen/plugin-helpers": "^1.17.8",
+    "@graphql-codegen/typescript": "^1.17.8",
+    "@graphql-codegen/typescript-operations": "^1.17.8",
+    "@graphql-codegen/typescript-react-apollo": "^2.0.6",
+    "@graphql-codegen/typescript-resolvers": "^1.17.8",
     "@types/graphql": "^14.5.0",
     "@types/node": "^16.4.13",
     "@types/react": "17.0.16",
+    "@types/react-dom": "^17.0.9",
     "autoprefixer": "^10.3.1",
+    "babel-jest": "26.3.0",
     "eslint": "7.32.0",
     "eslint-config-airbnb": "^18.2.1",
     "eslint-config-next": "11.0.1",
@@ -46,8 +50,11 @@
     "eslint-plugin-react-hooks": "^4.2.0",
     "graphql-let": "^0.18.4",
     "graphql-tag": "^2.12.5",
+    "jest": "26.4.0",
     "postcss": "^8.3.6",
+    "prisma": "^2.28.0",
     "tailwindcss": "^2.2.7",
+    "ts-node": "^9.1.1",
     "typescript": "4.3.5",
     "yaml-loader": "^0.6.0"
   }
