--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@graphql-codegen/typescript-react-apollo": "^2.0.6",
     "@graphql-codegen/typescript-resolvers": "^1.17.8",
     "@types/graphql": "^14.5.0",
+    "@types/mongodb": "^4.0.7",
     "@types/node": "^16.4.13",
     "@types/react": "17.0.16",
     "@types/react-dom": "^17.0.9",
