--- a/package.json
+++ b/package.json
@@ -10,11 +10,10 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@apollo/react-hooks": "^4.0.0",
+    "@apollo/client": "^3.4.7",
     "@graphql-tools/load-files": "6.0.18",
     "@graphql-tools/merge": "6.0.18",
     "@graphql-tools/schema": "6.0.18",
-    "apollo-boost": "^0.4.9",
     "apollo-server-micro": "^2.16.1",
     "bcryptjs": "^2.4.3",
     "cookie": "^0.4.1",
